[package]
name = "input-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
input-client-common = { path = "../input-client-common", features = ["user"] }
anyhow = "1"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time", "sync"] }
clap = {version="4.5.16", features=["derive"]}
serde_json = "1.0.127"
reqwest = { version = "0.12.7", features = ["json"] }

[[bin]]
name = "input-client"
path = "src/main.rs"
